--- a/templates/authapp/login.html
+++ b/templates/authapp/login.html
@@ -1,35 +1,38 @@
-{% extends 'base.html' %}
-{% load static %}
-
+{% extends "base.html" %}
 
 {% block content %}
-<div class="wrapper">
-    <div class="error-login">
-        {% for message in messages %}
-            {{ message }}
-        {% endfor %}
-        {% for error in form.non_field_errors %}
-            {{ error }}
-        {% endfor %}
-    </div>
-    <div class="header">
-        <h3 class="sign-in">Log in</h3>
-    </div>
-    <div class="clear"></div>
-    <form action="" method="post">{% csrf_token %}
-        <div>
-            {{ form.username }}
-        </div>
-        <div>
-            {{ form.password }}
-        </div>
-        <div>
-            <input type="submit" value="Log in"/>
-        </div>
-{#        <a class="forgot-label" href="{% url 'authapp:forgot_pass' %}">Forgot your password?</a>#}
-        <a class="registr" href="{% url 'authapp:signup' %}">
-            Регистрация
-        </a>
-    </form>
-</div>
+
+{% if form.errors %}
+<p>Ваше имя пользователя и пароль не совпали. Пожалуйста, попробуйте еще раз.</p>
+{% endif %}
+
+{% if next %}
+    {% if user.is_authenticated %}
+    <p>У вашей учетной записи нет доступа к этой странице. 
+        Чтобы продолжить, войдите в учетную запись, у которой есть доступ.</p>
+    {% else %}
+    <p>Пожалуйста, войдите, чтобы увидеть эту страницу.</p>
+    {% endif %}
+{% endif %}
+
+<form method="post" action="{% url 'authapp:login' %}">
+{% csrf_token %}
+<table>
+<tr>
+    <td>{{ form.username.label_tag }}</td>
+    <td>{{ form.username }}</td>
+</tr>
+<tr>
+    <td>{{ form.password.label_tag }}</td>
+    <td>{{ form.password }}</td>
+</tr>
+</table>
+
+<input type="submit" value="login">
+<input type="hidden" name="next" value="{{ next }}">
+</form>
+
+{# Assumes you set up the password_reset view in your URLconf #}
+{#<p><a href="{% url 'authapp:password_reset' %}">Сменить пароль?</a></p>#}
+
 {% endblock %}
