--- a/templates/authapp/login.html
+++ b/templates/authapp/login.html
@@ -14,23 +14,18 @@
     <p>Пожалуйста, войдите, чтобы увидеть эту страницу.</p>
     {% endif %}
 {% endif %}
-
-<form method="post" action="{% url 'authapp:login' %}">
-{% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
-
-<input type="submit" value="login">
-<input type="hidden" name="next" value="{{ next }}">
-</form>
+    <form method="post" action="{% url 'authapp:login' %}">
+    {% csrf_token %}
+        <div class="mb-3">
+          <label for="formGroupExampleInput" class="form-label">{{ form.username.label_tag }}</label>
+          {{ form.username }}
+        </div>
+        <div class="mb-3">
+          <label for="formGroupExampleInput2" class="form-label">{{ form.password.label_tag }}</label>
+          {{ form.password }}
+        </div>
+    <input class="btn btn-primary" type="submit" value="Войти">
+    </form>
 
 {# Assumes you set up the password_reset view in your URLconf #}
 {#<p><a href="{% url 'authapp:password_reset' %}">Сменить пароль?</a></p>#}
