--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>My site</title>
+      {% load bootstrap5 %}
+      {% bootstrap_css %}
+      {% bootstrap_javascript %}
 </head>
-<body>
+<body class="text-center">
 {% block content %}
     
 {% endblock %}
